--- a/src/java/org/apache/lucene/util/packed/package.html
+++ b/src/java/org/apache/lucene/util/packed/package.html
@@ -9,7 +9,7 @@
     access speed. The standard usage scenario is replacing large int or long
     arrays in order to reduce the memory footprint.
 </p><p>
-    The main access point is the {@link PackedInts} factory.
+    The main access point is the {@link org.apache.lucene.util.packed.PackedInts} factory.
 </p>
 
 </body>
